# ira_open_street_map

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: 2011_09_26_drive_0005_sync.launch  2011_09_26_drive_0005_sync.launch~  2011_09_26_drive_0070_sync.launch  kitti_00.launch  kitti_01.launch  kitti_02.launch  kitti_04.launch  kitti_05.launch  kitti_06.launch  kitti_07.launch  kitti_07_cutted.launch  kitti_08.launch  kitti_09.launch  kitti_10.launch  kitti_10_cutted.launch
maps/: 2011_09_26_drive_0001_sync.osm  2011_09_26_drive_0005_sync.osm  2011_09_26_drive_0005_sync_buildings.osm  RTK_GPS_kitti_00.kml  RTK_GPS_kitti_01.kml  RTK_GPS_kitti_02.kml  RTK_GPS_kitti_04.kml  RTK_GPS_kitti_05.kml  RTK_GPS_kitti_06.kml  RTK_GPS_kitti_07.kml  RTK_GPS_kitti_08.kml  RTK_GPS_kitti_09.kml  RTK_GPS_kitti_10.kml  bicocca2.osm  campus_unimib.osm  kitti_00.kml  kitti_00.osm  kitti_01.kml  kitti_01.osm  kitti_02.kml  kitti_02.osm  kitti_04.kml  kitti_04.osm  kitti_05.osm  kitti_05_debug.osm  kitti_05_edited.osm  kitti_06.kml  kitti_06.osm  kitti_07.osm  kitti_08.kml  kitti_09.kml  kitti_09.osm  map.osm  map_oneway.osm  map_u14.osm  readme-osm-to-kml  tesi_overpass.osm  tesi_standard.osm  xapi.osm
rviz/: kitti_01.rviz  map.rviz  tesi.rviz
src/: osm_downloader_node.cpp  osm_map_test_node.cpp  osm_query_node.cpp
srv/: ecef_2_lla.srv  getDistanceFromLaneCenter.srv  getHighwayInfo.srv  get_closest_way_distance_utm.srv  get_distance_from_xy.srv  get_node_coordinates.srv  latlon_2_xy.srv  lla_2_ecef.srv  local_map_transform.bak  oneway.srv  osm_query_service.srv  snap_particle_xy.srv  way_direction.srv  xy_2_latlon.srv
