<?xml version="1.0"?>
<package>
  <name>ira_open_street_map</name>
  <version>0.0.1</version>
  <description>The ira_open_street_map package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="ballardini@disco.unimib.it">Augusto Luis Ballardini</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="dario.limongi@gmail.com">Dario Limongi</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
